--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -1,5 +1,4 @@
 .draggable {
-    cursor: move;
     margin-bottom: 1rem;
     user-select: none;
 
@@ -10,7 +9,7 @@
 
     /* Size */
     height: 4rem;
-    width: 16rem;
+    width: 100%;
 
     /* Misc */
     border: 1px solid #cbd5e0;
